[tool.poetry]
name = "hacky"
version = "0.1.0"
description = ""
authors = ["funnydman"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
mypy = "^0.991"
pylint = "^2.15.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-docstring",
    "fixme",
    "too-few-public-methods"
]
